# panda3d-openxr

./: README.md  pyproject.toml  setup.py
p3dopenxr/: actionset.py  config_view.py  instance.py  layer.py  p3dopenxr.py  projection_view.py  session.py  space.py  swapchain.py  system.py
samples/minimal/: main.py
